// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokens util function 1`] = `
Object {
  "--backgroundColor": "black",
  "--height": 24,
  "--width": 32,
}
`;

exports[`Tokens util function conditional 1`] = `
Object {
  "--backgroundColor": "grey",
  "--height": 24,
  "--width": 32,
}
`;
